# TaskEbb

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README_progress.md
config/: config.example.ini
headers/: config_manager.hpp  curl_handle.hpp  database_manager.hpp  main_window.hpp  periodic_tracker.hpp  task.hpp  task_template.hpp  telegram_bot.hpp  telegram_notifier.hpp
sources/: main.cpp
sources/core/: config_manager.cpp  curl_handle.cpp  database_manager.cpp  main_window.cpp  periodic_tracker.cpp  task.cpp  task_template.cpp  telegram_bot.cpp  telegram_notifier.cpp
tests/: CMakeLists.txt  database_manager_test.cpp  periodic_tracker_test.cpp  task_template_test.cpp  task_test.cpp
